[package]
name = "rust-technical-metrics"
version = "1.0.0"
edition = "2021"

[[bin]]
edition = "2021"
name = "technical-metrics"
path = "src/main.rs"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
futures = "0.3.31"
chrono = "0.4.39"
serde_json = "1.0.136"
indexmap = { version = "2.7.0", features = ["serde"] }
git2 = "0.20.0"
git2_credentials = "0.15.0"
gitea-sdk = "0.5.0"
#gitea-sdk = { path = "../rust-gitea-sdk" }
itertools = "0.14.0"

indicatif = "0.17.9"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
markdown-builder = "1.0.0"
#markdown-builder = { path = "../rust-markdown-builder" }
markdown-table = "0.2.0"